# argus_test_task

./: CMakeLists.txt  application.h  command_line_parser.cpp  command_line_parser.h  image_processor.cpp  image_processor.h  test_task.cpp
